# pyregion

./: .buildinfo  .gitignore  .gitmodules  .landscape.yml  .readthedocs.yml  .travis.yml  CHANGELOG  CHANGES.rst  MANIFEST.in  README  README.md  README.rst  appveyor.yml  examples  examples.html  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: ci.yml  ci_tests.yml
api/: index.html
doc/: conf.py  examples.rst  index.rst  make.py
doc/_templates/: layout.html
doc/figures/: demo_filter_mask.py  demo_region_filter01.py  ds9.ps  test.reg  test02.reg  test_region_drawing.py  test_region_drawing2.py
doc/sphinxext/: github_sphinx.py  plot_directive_v3.py
doc/users/: index.rst  installing.rst  overview.rst
docs/: Makefile  api.rst  conf.py  examples  examples.rst  figures  getting_started.rst  index.rst  installation.rst  rtd-pip-requirements
docs/_templates/: indexsidebar.html
docs/examples/: demo_helper.py  demo_region01.py  demo_region04.py  demo_region_filter01.py  test04_img.reg
docs/figures/: demo_filter_mask.py  pspc_skyview.fits  region_drawing.py  region_drawing2.py  test_region_drawing.py  test_region_drawing2.py
docs/pyregion/: examples.rst  index.rst
docs/users/: index.rst  installing.rst  overview.rst
examples/: demo_helper.py  demo_print_region.py  demo_region01.py  demo_region02.py  demo_region03.py  demo_region04.py  demo_region_filter01.py  sample_fits01.header  test.header  test01.reg  test01_fk5_degree.reg  test01_gal.reg  test01_img.reg  test01_print.reg  test_annuli.reg  test_annuli_wcs.reg  test_context.reg  test_text.reg
lib/: __init__.py  ds9_attr_parser.py  ds9_region_parser.py  kapteyn_celestial.py  kapteyn_helper.py  mpl_helper.py  parser_ds9.py  parser_helper.py  physical_coordinate.py  region_attr.py  region_numbers.py  region_to_filter.py  region_to_mpl_patch.py  wcs_converter.py  wcs_helper.py
licenses/: LICENSE.rst  LICENSE_kapteyn.txt
orig/: .gitignore  .travis.yml  MANIFEST.in  README
orig/examples/: demo_helper.py  test01_ciao_physical.reg  test01_ds9_physical.reg  test_annuli_ciao.reg
orig/lib/: region_numbers.py  wcs_helper.py
orig/src/: _region_filter.c
plot_directive/examples/: demo_region03.py
pyregion/: __init__.py  _astropy_init.py  _region_filter.pyx  base.py  c_numpy.pxd  conftest.py  core.py  ds9_attr_parser.py  ds9_region_parser.py  mpl_helper.py  parser_helper.py  physical_coordinate.py  region_numbers.py  region_to_filter.py  wcs_converter.py  wcs_helper.py
pyregion/src/: c_numpy.pxd
src/: _region.c  _region.pyx  _region_filter.c  _region_filter.pyx  c_python.pxd  geom.h
static/: opensearch.xml
tests/: test_region.py  test_wcs_helper.py
users/: index.html  installing.html  overview.html
(+36 files in other folders)
