[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
name = pyregion
version = 2.1.1
description = python parser for ds9 region files
# long_description = 
author = Jae-Joon Lee
author_email = lee.j.joon@gmail.com
license = MIT
url = https://github.com/astropy/pyregion
edit_on_github = False
github_project = astropy/pyregion
