[metadata]
name = pyregion
version = 2.1.1
description = python parser for ds9 region files
# long_description = 
author = Jae-Joon Lee
author_email = lee.j.joon@gmail.com
license = MIT
url = https://github.com/astropy/pyregion
edit_on_github = False
github_project = astropy/pyregion

[options]
python_requires = >=3.7
install_requires =
    pyparsing>=2.0
    numpy
    astropy>=1.0
packages = find:
include_package_data = True

[options.package_data]
pyregion.tests.data =
    *.header
    *.reg

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
