[metadata]
name = pyregion
description = python parser for ds9 region files
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Jae-Joon Lee
author_email = lee.j.joon@gmail.com
license = MIT
url = https://github.com/astropy/pyregion
project_urls =
    Documentation = https://pyregion.readthedocs.io/
    Source = https://github.com/astropy/pyregion
    Tracker = https://github.com/astropy/pyregion/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
python_requires = >=3.7
install_requires =
    pyparsing>=2.0
    numpy>=1.16
    astropy>=4.0
packages =
    pyregion
    pyregion.tests
    pyregion.tests.data
include_package_data = True

[options.package_data]
pyregion.tests.data =
    *.header
    *.reg

[options.extras_require]
test =
    pytest
    pytest-astropy-header
docs =
    matplotlib
    sphinx
    sphinx-astropy
    sphinx-rtd-theme

[build_docs]
source_dir = docs
build_dir = docs/_build
all_files = 1

[upload_docs]
upload_dir = docs/_build/html
show_response = 1

[tool:pytest]
minversion = 6.0
norecursedirs =
    build
    docs/_build
testpaths =
    pyregion
    docs
